force-app/main/default/objects/custom_create56__c/custom_create56__c.object-meta.xml
<CustomObject>
    <label>Custom created object56</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects56</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>