force-app/main/default/objects/custom_create56__c/fields/custom_create_56field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_56field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 56field503</label>
    <type>Checkbox</type>
</CustomField>